--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>OVO JE NAPT PRVI GITHUB HTML DOKUMENT</h1>
+    <a href="/portfolio.html">Ovdje se nalazi moj porftolio</a>
 </body>
 </html>
