Added oblutak web to porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,17 +47,15 @@
 
                 <!-- Project 2 -->
                 <div class="project-card" id="project-2">
-                    <div class="project-img" style="background-image: url('https://via.placeholder.com/600x400/166088/ffffff?text=Portfolio+Website');"></div>
+                    <div class="project-img" style="background-image: url('images/oblutak-img.png');"></div>
                     <div class="project-content">
-                        <h3>Portfolio Website</h3>
-                        <p>A modern portfolio website with smooth animations and responsive design for a photography client.</p>
+                        <h3>Oblutak Website</h3>
+                        <p>A modern website showcasing decorative garden stones with a responsive design.</p>
                         <div class="project-tags">
                             <span class="tag">HTML5</span>
                             <span class="tag">CSS3</span>
-                            <span class="tag">JavaScript</span>
-                            <span class="tag">GSAP</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="oblutak/index.html" class="btn">View Project</a>
                     </div>
                 </div>
 
