--- a/oblutak/index.html
+++ b/oblutak/index.html
@@ -20,5 +20,36 @@
         <p>ŠIROK IZBOR GRANULACIJA, BOJA I OBLIKA</p>
     </section>
 
+    <section class="products">
+        <div class="products-img-div">
+            <div class="productsbg">
+            <img src="assets/images/00-oblikovani_bijeli_oblutak.png" alt="product" id="product00">
+            </div>
+        </div>
+            <div class="product-info">
+                <div class="category">BIJELI MARMORNI OBLUTAK</div>
+                <h3>OBLIKOVANI BIJELI OBLUTAK</h3>
+                <div class="divider"></div>
+                <div class="product-details">
+                    <div class="granulacije">
+                        <div class="row">
+                            <span class="meta">Granulacija:</span>
+                            <span>1-3 cm</span>
+                        </div>
+                        <div class="row">
+                            <span class="meta">Pakiranje</span>
+                            <span>25 kg</span>
+                        </div>
+                        <div class="row">
+                            <span class="meta">Porijeklo</span>
+                            <span>Grčka</span>
+                        </div>
+                    </div>
+                    <img src="assets/uteg.svg" class="uteg" alt="uteg">
+                </div>
+                <button class="cta-button">Cijena na upit</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
