css-product-info, bg-col sub klase, img-overflow-visable

--- a/oblutak/index.html
+++ b/oblutak/index.html
@@ -22,7 +22,7 @@
 
     <section class="products">
         <div class="products-img-div">
-            <div class="productsbg">
+            <div class="productsbg c">
             <img src="assets/images/00-oblikovani_bijeli_oblutak.png" alt="product" id="product00">
             </div>
         </div>
