added circular slider repo to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,17 +61,17 @@
 
                 <!-- Project 3 -->
                 <div class="project-card" id="project-3">
-                    <div class="project-img" style="background-image: url('https://via.placeholder.com/600x400/4fc3dc/ffffff?text=Weather+App');"></div>
+                    <div class="project-img" style="background-image: url('oblutak/assets/images/circula-slider.png');"></div>
                     <div class="project-content">
-                        <h3>Weather Application</h3>
-                        <p>A weather forecast application that provides real-time weather data and 5-day forecasts for any location.</p>
+                        <h3>Animated circular slider</h3>
+                        <p>An interactive animated circular slider designed for smooth item selection in a visually engaging format.</p>
                         <div class="project-tags">
                             <span class="tag">JavaScript</span>
-                            <span class="tag">API Integration</span>
                             <span class="tag">CSS3</span>
+                            <span class="tag">HTML5</span>
                             <span class="tag">Responsive Design</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://lovre-p.github.io/circular-slider-with-anime-js/" class="btn">View Project</a>
                     </div>
                 </div>
 
