--- a/oblutak/index.html
+++ b/oblutak/index.html
@@ -21,33 +21,29 @@
     </section>
 
     <section class="products">
+        <div class="product-info">
+            <h2>BIJELI MRAMORNI OBLUTAK</h2>
+            <h3>LIROVANI BIJELI OBLUTAK</h3>
+            <hr>
+            <p>Granulacija:</p>
+            <div class="product-details">
+                <div class="granulacije">
+                    <div class="row">
+                        <span>05-15 mm</span>
+                        <span>15-35 mm</span>
+                    </div>
+                    <div class="row">
+                        <span>35-50 mm</span>
+                        <span>50-80 mm</span>
+                    </div>
+                </div>
+                <img src="assets/uteg.svg" class="uteg" alt="uteg">
+            </div>
+            <button class="cta-button">CIJENA NA UPIT</button>
+        </div>
         <div class="products-img-div">
             <div class="productsbg c">
-            <img src="assets/images/00-oblikovani_bijeli_oblutak.png" alt="product" id="product00">
-            </div>
-        </div>
-            <div class="product-info">
-                <div class="category">BIJELI MARMORNI OBLUTAK</div>
-                <h3>OBLIKOVANI BIJELI OBLUTAK</h3>
-                <div class="divider"></div>
-                <div class="product-details">
-                    <div class="granulacije">
-                        <div class="row">
-                            <span class="meta">Granulacija:</span>
-                            <span>1-3 cm</span>
-                        </div>
-                        <div class="row">
-                            <span class="meta">Pakiranje</span>
-                            <span>25 kg</span>
-                        </div>
-                        <div class="row">
-                            <span class="meta">Porijeklo</span>
-                            <span>Grčka</span>
-                        </div>
-                    </div>
-                    <img src="assets/uteg.svg" class="uteg" alt="uteg">
-                </div>
-                <button class="cta-button">Cijena na upit</button>
+                <img src="assets/images/00-oblikovani_bijeli_oblutak.png" alt="product" id="product00">
             </div>
         </div>
     </section>
