Feat: added responsive design to submit form, finished oblutak page, connected 4 portfolio card webshop

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,7 @@
                         <div class="project-tags">
                             <span class="tag">HTML5</span>
                             <span class="tag">CSS3</span>
+                            <span class="tag">Responsive Design</span>
                         </div>
                         <a href="oblutak/index.html" class="btn">View Project</a>
                     </div>
@@ -77,17 +78,17 @@
 
                 <!-- Project 4 -->
                 <div class="project-card" id="project-4">
-                    <div class="project-img" style="background-image: url('https://via.placeholder.com/600x400/333333/ffffff?text=Task+Manager');"></div>
+                    <div class="project-img" style="background-image: url('images/webshop.png');"></div>
                     <div class="project-content">
-                        <h3>Task Manager</h3>
-                        <p>A full-stack task management application with user authentication, task categories, and deadline notifications.</p>
+                        <h3>Web Shop Template</h3>
+                        <p>A fully responsive web shop template with a clean and modern design.</p>
                         <div class="project-tags">
-                            <span class="tag">React</span>
-                            <span class="tag">Express</span>
-                            <span class="tag">MongoDB</span>
-                            <span class="tag">JWT</span>
+                            <span class="tag">HTML5</span>
+                            <span class="tag">CSS3</span>
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">Responsive Design</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://lovre-p.github.io/webshop-v0.1" class="btn">View Project</a>
                     </div>
                 </div>
             </div>
