--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,7 @@
                         <div class="project-tags">
                             <span class="tag">HTML</span>
                             <span class="tag">CSS</span>
+                            <span class="tag">Responsive Design</span>
                         </div>
                         <a href="submit-form.html" class="btn">View Project</a>
                     </div>
