--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="components.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -15,10 +16,10 @@
             <nav>
                 <div class="logo">Lovre P.</div>
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html" id="home-link">Home</a></li>
+                    <li><a href="portfolio.html" id="portfolio-link">Portfolio</a></li>
+                    <li><a href="#about" id="about-link">About</a></li>
+                    <li><a href="#contact" id="contact-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,7 +40,7 @@
         <div class="hero-content">
             <h1>Web Developer & Designer</h1>
             <p>Creating beautiful, functional websites and applications that make an impact.</p>
-            <a href="portfolio.html" class="btn">View My Work</a>
+            <a href="portfolio.html" class="btn" id="view-work-link">View My Work</a>
         </div>
     </section>
 
@@ -49,7 +50,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="https://via.placeholder.com/500x500" alt="Profile Image">
+                    <img src="images/profile-pic.png" alt="Profile Image">
                 </div>
                 <div class="about-text">
                     <h2>Who Am I?</h2>
@@ -112,10 +113,10 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="index.html" id="footer-home-link">Home</a></li>
+                        <li><a href="portfolio.html" id="footer-portfolio-link">Portfolio</a></li>
+                        <li><a href="#about" id="footer-about-link">About</a></li>
+                        <li><a href="#contact" id="footer-contact-link">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
