--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="components.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -15,10 +16,10 @@
             <nav>
                 <div class="logo">Lovre P.</div>
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="index.html" id="home-link">Home</a></li>
+                    <li><a href="portfolio.html" id="portfolio-link">Portfolio</a></li>
+                    <li><a href="index.html#about" id="about-link">About</a></li>
+                    <li><a href="index.html#contact" id="contact-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,7 +43,7 @@
                             <span class="tag">CSS</span>
                             <span class="tag">Responsive Design</span>
                         </div>
-                        <a href="submit-form.html" class="btn">View Project</a>
+                        <a href="submit-form.html" class="btn" id="submit-form-link">View Project</a>
                     </div>
                 </div>
 
@@ -57,7 +58,7 @@
                             <span class="tag">CSS3</span>
                             <span class="tag">Responsive Design</span>
                         </div>
-                        <a href="oblutak/index.html" class="btn">View Project</a>
+                        <a href="oblutak/index.html" class="btn" id="oblutak-link">View Project</a>
                     </div>
                 </div>
 
@@ -101,7 +102,7 @@
         <div class="container">
             <h2 style="margin-bottom: 20px;">Interested in working together?</h2>
             <p style="margin-bottom: 30px; max-width: 600px; margin-left: auto; margin-right: auto;">I'm always open to discussing new projects, creative ideas or opportunities to be part of your vision.</p>
-            <a href="index.html#contact" class="btn" style="background-color: white; color: var(--primary-color);">Get In Touch</a>
+            <a href="index.html#contact" class="btn" id="get-in-touch-link" style="background-color: white; color: var(--primary-color);">Get In Touch</a>
         </div>
     </section>
 
@@ -123,10 +124,10 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="index.html#about">About</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="index.html" id="footer-home-link">Home</a></li>
+                        <li><a href="portfolio.html" id="footer-portfolio-link">Portfolio</a></li>
+                        <li><a href="index.html#about" id="footer-about-link">About</a></li>
+                        <li><a href="index.html#contact" id="footer-contact-link">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
