--- a/submit-form.html
+++ b/submit-form.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="components.js"></script>
 </head>
 <body>
     <header>
@@ -16,7 +17,7 @@
             <img src="images/logo.png" alt="logo"><h2>Automated Information System</h2>
         </div>
         <div class="nav-links">
-            <a href="#">O NAMA</a>
+            <a href="#" id="about-link">O NAMA</a>
             <div class="social-icons">
                 <a href="#" class="facebook-icon">
                     <i class="fab fa-facebook-f icon-top"></i>
@@ -89,7 +90,7 @@
                             <button type="submit">POŠALJI UPIT</button>
                         </p>
                         <p>
-                            <a href="#">Posjeti naš Web</a>
+                            <a href="#" id="visit-web-link">Posjeti naš Web</a>
                         </p>
                     </div>
                 </div>
