--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="images/profile-pic.png" alt="Profile Image">
+                    <div class="circle-img-container">
+                        <img src="images/headshot.png" alt="Profile Image">
+                    </div>
                 </div>
                 <div class="about-text">
                     <h2>Who Am I?</h2>
