change: contact info

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact Info</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Split, Croatia</p>
-                    <p><i class="fas fa-envelope"></i> lovre@example.com</p>
-                    <p><i class="fas fa-phone"></i> +385 91 234 5678</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Šibenik, Croatia</p>
+                    <p><i class="fas fa-envelope"></i> lovre.petrina2@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +385 95 *** ****</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Lovre P. All Rights Reserved.</p>
+                <p>&copy; 2025 Lovre P. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
