update: added mega-invest project to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,6 +93,27 @@
                         <a href="https://lovre-p.github.io/webshop-v0.1" class="btn">View Project</a>
                     </div>
                 </div>
+
+        <!-- Project 5 -->
+                <div class="project-card" id="project-5">
+                    <div class="project-img" style="background-image: url('images/mega-invest.png');"></div>
+                    <div class="project-content">
+                        <h3>Investment platform</h3>
+                        <p>A fully responsive investment platform with a clean and modern design, admin backend with authentication, middleware and JSON Investment API</p>
+                        <div class="project-tags">
+                            <span class="tag">Typescript</span>
+                            <span class="tag">CSS3</span>
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">JSON</span>
+                            <span class="tag">API</span>
+                            <span class="tag">Authentication</span>
+                            <span class="tag">Middleware</span>
+                            <span class="tag">Backend</span>
+                            <span class="tag">Responsive Design</span>
+                        </div>
+                        <a href="https://www.mega-invest.hr" class="btn">View Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
