--- a/portfolio.html
+++ b/portfolio.html
@@ -114,6 +114,23 @@
                         <a href="https://www.mega-invest.hr" class="btn">View Project</a>
                     </div>
                 </div>
+
+                <!-- Project 6 -->
+                <div class="project-card" id="project-6">
+                    <div class="project-img" style="background-image: url('images/kalkulator.png');"></div>
+                    <div class="project-content">
+                        <h3>Simple Calculator</h3>
+                        <p>A simple calculator with basic arithmetic operations.</p>
+                        <div class="project-tags">
+                            <span class="tag">HTML</span>
+                            <span class="tag">CSS</span>
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">Responsive Design</span>
+                        </div>
+                        <a href="kalkulator.html" class="btn" id="submit-form-link">View Project</a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
