added project 7 to portfolio site

--- a/portfolio.html
+++ b/portfolio.html
@@ -131,6 +131,25 @@
                     </div>
                 </div>
 
+                <!-- Project 7 -->
+                <div class="project-card" id="project-7">
+                    <div class="project-img" style="background-image: url('images/ai.png');"></div>
+                    <div class="project-content">
+                        <h3>AI Voice Controlled UI</h3>
+                        <p>A voice controlled UI for a web application.</p>
+                        <div class="project-tags">
+                            <span class="tag">HTML</span>
+                            <span class="tag">CSS</span>
+                            <span class="tag">Typescript</span>
+                            <span class="tag">JSON</span>
+                            <span class="tag">API</span>
+                            <span class="tag">Responsive Design</span>
+                        </div>
+                        <a href="https://ai-interactive-portfolio-234003223541.us-west1.run.app/" class="btn" id="submit-form-link">View Project</a>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </section>
